--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">sportF</string>
     <string name="title_activity_main2">Main2Activity</string>
+    <string name="facebook_app_id">330172190920744</string>
+    <string name="fb_login_protocol_scheme">fb330172190920744</string>
+
 </resources>
